# robot

./: CHANGELOG.md  LICENSE  README.md  backend.nix  nixpkgs.nix  robot.cabal  robot.nix  shell.nix
app/: Main.hs
src/: ParseInstructions.hs  Render.hs  Robot.hs
test/: Main.hs  ParserTests.hs
